@@ -3,6 +3,7 @@
 * Respect sql_pass if given
 * Added INVISIBLE to list of flags shown for users
 * Added IDLE flag for channels that have been autoparted
+* Check we are opped before issuing modes.
 * Bumped version to 1.2.12
 
 2003-10-02 1.2.11 Jeekay
